fix(css): Option button dont overflow of the screen when width px is too low

--- a/src/app/(Pages)/Questions/page.module.css
+++ b/src/app/(Pages)/Questions/page.module.css
@@ -52,3 +52,15 @@
         left: auto;
     }
 }
+
+@media screen and (max-width: 400px) {
+    .optionButtonsContainer {
+        transform: scale(.8);
+    }
+}
+
+@media screen and (max-width: 310px) {
+    .optionButtonsContainer {
+        transform: scale(.7);
+    }
+}
